; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_message.c_msg_use_printf.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_message.c_msg_use_printf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@termcap_active = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @msg_use_printf() #0 {
  %1 = call i32 (...) @msg_check_screen()
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %12

3:                                                ; preds = %0
  %4 = call i64 (...) @swapping_screen()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %3
  %7 = load i32, i32* @termcap_active, align 4
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  br label %10

10:                                               ; preds = %6, %3
  %11 = phi i1 [ false, %3 ], [ %9, %6 ]
  br label %12

12:                                               ; preds = %10, %0
  %13 = phi i1 [ true, %0 ], [ %11, %10 ]
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i32 @msg_check_screen(...) #1

declare dso_local i64 @swapping_screen(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
